Fixed stream controls & localstream collapsing into each other on small screens

--- a/src/front-end/css/index.css
+++ b/src/front-end/css/index.css
@@ -233,6 +233,7 @@ video{
         margin: 10px; 
         height: fit-content;
         width: fit-content;
+        margin-top: 5em;
     }
 
 }
